--- a/views/viewPartials/categoryDropdown.pug
+++ b/views/viewPartials/categoryDropdown.pug
@@ -1,5 +1,5 @@
 div.dropdown(style="display:inline;padding-right:15px;")
-    button#dropdownMenu1.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
+    button#dropdownMenu1.fw.btn.btn-primary.dropdown-toggle(type='button', data-toggle='dropdown' style="border-radius:5px;")
         | Category: #{categoryObj.displayName} &nbsp
         span.caret
 
