--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -151,7 +151,7 @@ block content
 
     div.container
         each upload in channel.uploads
-            div.col-sm-4(style="text-align:center;height:298px")
+            div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:298px")
                 if isUser || isAdmin || ( user && user.role == 'moderator' )
                     div.editFileButtons
                         form.editLink(action="/api/upload/delete" method="POST" style="display:inline-block")
