--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -129,6 +129,7 @@ style.
     .plyr.plyr--video {
         max-width: 80%;
         margin: 0 auto;
+        /*border-radius: 5px;*/
     }
 
     .plyr.plyr__video-wrapper {
@@ -194,4 +195,8 @@ style.
             margin-bottom: 30px;
 
         }
+    }
+
+    .fw {
+        font-weight: 300
     }
