--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -129,7 +129,7 @@ style.
     .plyr.plyr--video {
         max-width: 80%;
         margin: 0 auto;
-        /*border-radius: 5px;*/
+        border-radius: 5px;
     }
 
     .plyr.plyr__video-wrapper {
@@ -199,4 +199,8 @@ style.
 
     .fw {
         font-weight: 300
+    }
+
+    .loginHeader {
+        font-size:18px;
     }
