--- a/views/media.pug
+++ b/views/media.pug
@@ -68,13 +68,13 @@ block content
                 if upload.uploader.customThumbnail
                     a(href=`/user/${upload.uploader.channelUrl}`)
 
-                        img(src=`${uploadServer}/${upload.uploader.channelUrl}/${upload.uploader.customThumbnail}` width="140px" height="140px")
+                        img(src=`${uploadServer}/${upload.uploader.channelUrl}/${upload.uploader.customThumbnail}` width="170px" height="170px" style="border-radius:13px")
                         br
                         br
                 else if upload.uploader.thumbnailUrl
                     a(href=`/user/${upload.uploader.channelUrl}`)
 
-                        img(src=`${uploadServer}/${upload.uploader._id}/unique.png` width="140px" height="140px")
+                        img(src=`${uploadServer}/${upload.uploader._id}/unique.png` width="170px" height="170px" style="border-radius:13px")
                         br
                         br
 
@@ -207,8 +207,8 @@ block content
 
                 // Upload Description
                 if upload.description
-                    h4(class="upload-description-value") Description
-                    p(style="width:50%;text-align: center;margin: 0 auto;white-space:pre-line;word-wrap:break-word;" id="descriptionText") #{upload.description}
+                    h4.fw(class="upload-description-value") Description
+                    p.fw(style="width:50%;text-align: center;margin: 0 auto;white-space:pre-line;word-wrap:break-word;" id="descriptionText") #{upload.description}
 
                 br
                 br
