--- a/views/upload.pug
+++ b/views/upload.pug
@@ -34,19 +34,25 @@ block content
       margin: 0 auto;
     }
 
+    .upload-information p, .formats p {
+      font-weight:300;
+      font-size:15px;
+    }
+
+    .u
   br
   div.center-block.text-center
       div.upload-information
-        h1
-          i.fa.fa-upload
-          | File Upload
+        h1(style="display:inline")
+          i.fa.fa-upload(style="display:inline")
+        h1.fw(style="display:inline") File Upload
 
         br
-        h3 NodeTube supports video, audio and image uploads
+        h3.fw NodeTube supports video, audio and image uploads
 
         br
         br
-        div(style="max-width:500px;margin:0 auto;")
+        div.formats(style="max-width:500px;margin:0 auto;")
           p(style="font-size:15px;margin-bottom:16px;") Supported File Formats
           p Video
           p(style="line-height:23px;max-width:310px;margin:0 auto;margin-bottom:19px;") .mp4, .avi, .flv, .MOV, .m4v, .ogv, .webm, .wmv, .mkv, .mov, .m2t, .MTS, .m2ts, .MPG, .AVI, .mpg
