--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -42,7 +42,7 @@ block content
     .u
   br
   div.center-block.text-center
-      div.upload-information
+      div.upload-information(style="margin-top:20px")
         h1(style="display:inline")
           i.fa.fa-upload(style="display:inline")
         h1.fw(style="display:inline") File Upload
