--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -93,7 +93,7 @@ block content
                 .form-group.center-block.text-center
                   br
                   a.resumable-browse
-                      button.fw.btn.btn-success.resumable-brwoser(style="font-size:19px;margin-bottom:-9px;") Select File
+                      button.fw.btn.btn-success.resumable-brwoser(style="font-size:19px;margin-bottom:-9px;border-radius:5px;") Select File
 
                   h3.fw OR
 
@@ -191,9 +191,9 @@ block content
                       br
 
                   br
-                  label(for="description") Description
+                  label.fw(for="description" style="font-size:23px") Description
                   br
-                  textarea.form-group(style="width:400px;max-width:95%;border-radius:4px;" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
+                  textarea.fw.form-group(style="width:400px;max-width:95%;border-radius:4px;font-size:16px;" type="text" name="description" id="description" maxlength='2000' rows="10" cols="70")
 
                   //br
                   //label.control-label(for='filetoupload' style="") Channel Thumbnail
@@ -203,7 +203,7 @@ block content
 
 
 
-                button.btn.btn-primary.submit-button(type="submit") Upload
+                button.fw.btn.btn-primary.submit-button(style="border-radius:5px;font-size:18px;" type="submit") Upload
 
           div.upload-gif
               h3.upload-title-name Your file is uploading
