delete newacct pug

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -453,7 +453,7 @@ block content
 
     //var handler = StripeCheckout.configure({
     //  key: stripeToken,
-    //  image: 'https://f001.backblazeb2.com/file/pewtube/pewtube/RCbutDM.jpg',
+    //  image: 'https://f001.backblazeb2.com/file/nodetube/nodetube/RCbutDM.jpg',
     //  locale: 'auto',
     //  // bitcoin: true,
     //  token: function (token) {
@@ -471,7 +471,7 @@ block content
     //        if (data == 'success') {
     //          window.location = "/account?to=pt-plus";
     //        } else {
-    //          swal("Something didn't work, please contact PewTube at ceo@pew.tube or via the widget in the bottom right corner")
+    //          swal("Something didn't work, please contact NodeTube at ceo@nodetube.live or via the widget in the bottom right corner")
     //        }
     //        console.log(data);
     //      },
