--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -9,11 +9,11 @@ block content
       .form-group
         label.fw.loginHeader.col-sm-3.control-label(for='email') Email or Username
         .col-sm-7
-          input.form-control(name='email', id='email', placeholder='Email or Username', autofocus, required)
+          input.fw.loginHeader.form-control(name='email', id='email', placeholder='Email or Username', autofocus, required)
       .form-group
         label.fw.loginHeader.col-sm-3.control-label(for='password') Password
         .col-sm-7
-          input.form-control(type='password', name='password', id='password', placeholder='Password', required)
+          input.fw.loginHeader.form-control(type='password', name='password', id='password', placeholder='Password', required)
       .form-group
         .col-sm-offset-3.col-sm-7
           button.fw.loginHeader.col-sm-3.btn.btn-primary(type='submit' style="border-radius:8px;width:122px;")
