fix recent uploads dropdowns

--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -26,13 +26,17 @@ block content
 
             br
 
+            // CATEGORY DROPDOWN
             if category
                 include ../viewPartials/categoryDropdown
 
+            // MEDIA TYPE DROPDOWN
             include ../viewPartials/mediaDropdown
 
+            // SENSITIVITY TYPE DROPDOWN
             include ../viewPartials/sensitivityFilterDropdown
 
+            // 5 LINK PAGINATION
             include ../viewPartials/pagination
 
             br
