popular dropdown working

--- a/views/viewPartials/mediaDropdown.pug
+++ b/views/viewPartials/mediaDropdown.pug
@@ -5,10 +5,10 @@ div.dropdown(style="display:inline;padding-right:15px;")
 
     ul.dropdown-menu(role='menu', aria-labelledby='dropdownMenu1')
         li(role='presentation')
-            a(href=`/media/recent/1?media=all&category=${category}`) All
+            a(href=`/media/recent/1?media=all&category=${category}&within=${within}`) All
         li(role='presentation')
-            a(href=`/media/recent/1?media=video&category=${category}`) Videos
+            a(href=`/media/recent/1?media=video&category=${category}&within=${within}`) Videos
         li(role='presentation')
-            a(href=`/media/recent/1?media=audio&category=${category}`) Audio
+            a(href=`/media/recent/1?media=audio&category=${category}&within=${within}`) Audio
         li(role='presentation')
-            a(href=`/media/recent/1?media=image&category=${category}`) Images
+            a(href=`/media/recent/1?media=image&category=${category}&within=${within}`) Images
