popular page views within is very smart now

--- a/views/viewPartials/popularUploadsNavbar.pug
+++ b/views/viewPartials/popularUploadsNavbar.pug
@@ -15,6 +15,6 @@ div.row
             a(href=`/media/popular/1?media=${mediaType}&category=${category}&within=1month`) Last Month
     div.col-sm-2
         h3
-            a(href=`/media/popular/1?media=${mediaType}&category=${category}`) All-Time
+            a(href=`/media/popular/1?media=${mediaType}&category=${category}&within=alltime`) All-Time
 
 hr
